# cinnabar-text

./: CMakeLists.txt  README.md
.github/workflows/: UnitTests.yml
dep/: CMakeLists.txt  Findcinnabar-core.cmake  Findcinnabar-render.cmake
docs/: annotated.html  annotated_dup.js  classes.html  dir_04a6e6a97f64908e63d23efbfafbab30.html  dir_04a6e6a97f64908e63d23efbfafbab30.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_77ac9c284621697810417f05928119d7.html  dir_77ac9c284621697810417f05928119d7.js  dir_ae05816d4ada55c9b4c250e14d878653.html  dir_ae05816d4ada55c9b4c250e14d878653.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+4 more)
doxygen/: cinnabar-text.doxyfile  doxyfile
github-scripts/: projects.txt
packaging/: arch.dockerfile
src/: CMakeLists.txt
(+43 files in other folders)
